--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,47 +1,37 @@
-.formContainer {
-  position: relative;
-  display: flex;
-  margin: 30px;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.formBox {
+.contactBox {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  width: 400px;
+  gap: 15px;
+
+  width: 200px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   padding: 20px;
+  overflow: hidden;
+  flex-grow: 1;
 }
-
-.title {
+.contactItem {
   display: flex;
   justify-content: center;
-  margin-bottom: 16px;
-}
-
-.formInput {
-  margin: 0 auto;
-  width: 300px;
-  padding: 8px;
+  align-items: baseline;
+  padding: 4px;
   border: none;
   border-radius: 5px;
   background-color: #f9f9f9;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   font-size: 16px;
+
+  word-wrap: break-word;
 }
 
-.formInput:focus {
-  outline: none;
-  box-shadow: 0 6px 16px rgba(220, 199, 199);
+.contactTitle {
+  margin: 0 auto;
 }
 
-.formBtn {
+.contactBtn {
   margin-top: 12px;
-  width: 316px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   border: none;
@@ -52,10 +42,11 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.formBtn:hover {
+.contactBtn:hover {
   transform: scale(1.05);
 }
 
-.inputError {
-  box-shadow: 0 0 8px 4px rgba(255, 0, 0, 0.9);
+.icon {
+  font-size: 18px;
+  margin-right: 2px;
 }
