--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -30,6 +30,7 @@
   background-color: #f9f9f9;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   font-size: 16px;
+  color: #666;
 }
 
 .formInput:focus {
